--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPCTG2">
-        <activity android:name=".Menu"></activity>
-        <activity android:name=".Medicamentos"></activity>
-        <activity android:name=".Adicionar_Medicamentos"></activity>
+        <activity android:name=".About"></activity>
+        <activity android:name=".Menu" />
+        <activity android:name=".Medicamentos" />
+        <activity android:name=".Adicionar_Medicamentos" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
