--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPCTG2">
-        <activity android:name=".About"></activity>
+        <activity android:name=".SelectMedIcon"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".About" />
         <activity android:name=".Menu" />
         <activity android:name=".Medicamentos" />
         <activity android:name=".Adicionar_Medicamentos" />
