--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name=".About" />
         <activity android:name=".Menu" />
         <activity android:name=".Medicamentos" />
-        <activity android:name=".Adicionar_Medicamentos" />
+        <activity android:name=".AdicionarMedicamentos" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
