--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPCTG2">
-        <activity android:name=".SelectMedIcon"></activity>
+        <activity android:name=".SelectMedicineIcon"></activity>
         <activity android:name=".Settings" />
         <activity android:name=".About" />
         <activity android:name=".Menu" />
-        <activity android:name=".Medicamentos" />
-        <activity android:name=".AdicionarMedicamentos" />
+        <activity android:name=".Medicine" />
+        <activity android:name=".AddMedicine" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
